Fix sidebar collapse issue
The sidebar now collapses such that the
"Dashboard" portion is never covered.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a {
 .container {
     display: grid;
     grid-template-rows: 10vh 10vh 80vh;
-    grid-template-columns: 2fr 7fr;
+    grid-template-columns: 2fr 5fr;
     grid-template-areas: 
         "sidebar-top header-top"
         "sidebar-bottom header-bottom"
@@ -59,6 +59,7 @@ a {
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(1.5rem, 2rem));
     justify-content: start;
+    padding-top: var(--top-section-top-padding);
 }
 
 .sidebar-top .sidebar-link {
@@ -67,7 +68,7 @@ a {
 
 .sidebar-top {
     grid-area: sidebar-top;
-    padding-top: var(--top-section-top-padding);
+    z-index: 1;
 }
 
 .sidebar-link {
@@ -82,7 +83,7 @@ a {
     padding-top: var(--top-section-top-padding);
     grid-area: header-top;
     display: grid;
-    grid-template-columns: 50vw 1fr;
+    grid-template-columns: 45vw 1fr;
     align-items: center;
     gap: 30px;
 }
@@ -109,7 +110,7 @@ a {
 }
 
 .header-top-right {
-    padding-right: 5rem;
+    padding-right:1rem;
     display: grid;
     grid-template-columns: 2.5em 2.5em 7.5em;
     gap: 2vw;
@@ -136,3 +137,5 @@ a {
 .main-content {
     grid-area: main-content;
 }
+
+/* To do: fix the home button overlapping the dashboard button when window size shrinks. Additionally, consider removing the dashboard link and just have text. Alternatively, when making the quick html files for all links, just replace dashboard with a different text.
